force-app/main/default/objects/VisMed_Segmentacion__c/VisMed_Segmentacion__c.object-meta.xml
<CustomObject>
    <label>Segmentación</label>
    <nameField>
        <displayFormat>Segmentacion-{0000}</displayFormat>
        <label>Segmentación Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segmentaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>