force-app/main/default/objects/VisMed_Segmentacion__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <formula>IF(
  OR(
    RecordType.Name =&apos;Metabolicos&apos;,
    RecordType.Name =&apos;Epilepsia&apos;,
    RecordType.Name =&apos;Metabolicos_y_Epilepsia&apos;
  ),
  Categoria_Nicho__c,
  IF(
    OR(
      RecordType.Name =&apos;Alergia&apos;,
      RecordType.Name =&apos;Pediatricos&apos;,
      RecordType.Name =&apos;Pediatricos General&apos;
    ),
    Categoria_Ped_Aler__c,
    Categoria_Nicho__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categoria</label>
    <type>Text</type>
</CustomField>