force-app/main/default/objects/VisMed_Segmentacion__c/fields/Categoria_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Categoria_Anterior__c</fullName>
    <label>Categoría Anterior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>