force-app/main/default/objects/VisMed_Segmentacion__c/fields/Categoria_Auxiliar__c.field-meta.xml
<CustomField>
    <fullName>Categoria_Auxiliar__c</fullName>
    <description>Campo usado para guardar la categoria de la formula antes del update, ya que al ser un campo formula no se pude comprar el old con le new value ya que siempre son iguales.</description>
    <label>Categoría Auxiliar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>