force-app/main/default/objects/VisMed_Segmentacion__c/fields/Categoria_Nicho__c.field-meta.xml
<CustomField>
    <fullName>Categoria_Nicho__c</fullName>
    <formula>Categoria_Nicho_aux__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categoría Nicho</label>
    <type>Text</type>
</CustomField>