force-app/main/default/objects/VisMed_Segmentacion__c/fields/Categoria_Nicho_aux__c.field-meta.xml
<CustomField>
    <fullName>Categoria_Nicho_aux__c</fullName>
    <label>Categoria Nicho aux</label>
    <length>100</length>
    <type>Text</type>
</CustomField>