force-app/main/default/objects/VisMed_Segmentacion__c/fields/Categoria_Ped_Aler__c.field-meta.xml
<CustomField>
    <fullName>Categoria_Ped_Aler__c</fullName>
    <formula>IF(
    INCLUDES(Profesional__r.KOL__c , &apos;KOL Ped&apos;), 
    &apos;A&apos;,
    CASE(
		Log_Paed_12_Mes_con_Cob_y_sin_Cob__c,
		0,&apos;D&apos;,
		0.5,&apos;D&apos;,
		1,&apos;D&apos;,
		1.5,&apos;C&apos;,
		2,&apos;C&apos;,
		2.5,&apos;B&apos;,
		3,&apos;B&apos;,
		3.5,&apos;B&apos;,
		4,&apos;A&apos;,
		4.5,&apos;A&apos;,
		5,&apos;A&apos;,
		6,&apos;A&apos;,
		NULL
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categoría Ped. Aler.</label>
    <type>Text</type>
</CustomField>