force-app/main/default/objects/VisMed_Segmentacion__c/fields/Frecuencia__c.field-meta.xml
<CustomField>
    <fullName>Frecuencia__c</fullName>
    <label>Frecuencia</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>