force-app/main/default/objects/VisMed_Segmentacion__c/fields/Institucion__c.field-meta.xml
<CustomField>
    <fullName>Institucion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Institucion</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Segmentaciones (Institucion)</relationshipLabel>
    <relationshipName>Segmentacion</relationshipName>
    <type>Lookup</type>
</CustomField>