force-app/main/default/objects/VisMed_Segmentacion__c/fields/Log_Paed_12_Mes_con_Cob_y_sin_Cob__c.field-meta.xml
<CustomField>
    <fullName>Log_Paed_12_Mes_con_Cob_y_sin_Cob__c</fullName>
    <formula>CASE(
    Profesional__r.PAC_0_12_MESES_SEM_C_COB_SOC__c, 
    &quot;1-9&quot;, 0, 
    &quot;10-19&quot;, 1,
    &quot;20-29&quot;,2,
    &quot;30-39&quot;,3,
    &quot;40-49&quot;,4,
    &quot;50-59&quot;,4,
    &quot;60-69&quot;,4,
    &quot;70-79&quot;,4,
    &quot;80-89&quot;,4,
    &quot;90-100&quot;,4,
    &quot;&gt;100&quot;,4,
    0
)
+
CASE(
    Profesional__r.PAC_0_12_MESES_SEM_SIN_COB_SOC__c, 
    &quot;1-9&quot;, 0.0, 
    &quot;10-19&quot;, 0.5,
    &quot;20-29&quot;,1.0,
    &quot;30-39&quot;,1.0,
    &quot;40-49&quot;,2,
    &quot;50-59&quot;,2,
    &quot;60-69&quot;,2,
    &quot;70-79&quot;,2,
    &quot;80-89&quot;,2,
    &quot;90-100&quot;,2,
    &quot;&gt;100&quot;,2,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Log Paed 12 Mes con Cob y sin Cob</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>