force-app/main/default/objects/VisMed_Segmentacion__c/fields/PREFIERE_NUTRICIA_ALERGIA__c.field-meta.xml
<CustomField>
    <fullName>PREFIERE_NUTRICIA_ALERGIA__c</fullName>
    <label>PREFIERE NUTRICIA ALERGIA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sin asignar</fullName>
                <default>true</default>
                <label>Sin asignar</label>
            </value>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>0% - 25%</fullName>
            </value>
            <value>
                <fullName>25% - 50%</fullName>
            </value>
            <value>
                <fullName>50% - 75%</fullName>
            </value>
            <value>
                <fullName>&gt;75%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>