force-app/main/default/objects/VisMed_Segmentacion__c/recordTypes/Adultos.recordType-meta.xml
<RecordType>
    <fullName>Adultos</fullName>
    <active>false</active>
    <label>Adultos</label>
</RecordType>