force-app/main/default/objects/VisMed_Segmentacion__c/recordTypes/Adultos_General_Comunidad.recordType-meta.xml
<RecordType>
    <fullName>Adultos_General_Comunidad</fullName>
    <active>true</active>
    <label>Adultos General Comunidad</label>
</RecordType>