force-app/main/default/objects/VisMed_Segmentacion__c/recordTypes/Adultos_General_Institucion.recordType-meta.xml
<RecordType>
    <fullName>Adultos_General_Institucion</fullName>
    <active>true</active>
    <label>Adultos General Institucion</label>
</RecordType>