force-app/main/default/objects/VisMed_Segmentacion__c/recordTypes/Adultos_Oncologia.recordType-meta.xml
<RecordType>
    <fullName>Adultos_Oncologia</fullName>
    <active>true</active>
    <label>Adultos Oncologia</label>
</RecordType>