force-app/main/default/objects/VisMed_Segmentacion__c/recordTypes/Alergia.recordType-meta.xml
<RecordType>
    <fullName>Alergia</fullName>
    <active>true</active>
    <label>Alergia</label>
</RecordType>