force-app/main/default/objects/VisMed_Segmentacion__c/recordTypes/Dieta_Cetogenica.recordType-meta.xml
<RecordType>
    <fullName>Dieta_Cetogenica</fullName>
    <active>false</active>
    <label>Dieta Cetogénica</label>
</RecordType>