force-app/main/default/objects/VisMed_Segmentacion__c/recordTypes/Epilepsia.recordType-meta.xml
<RecordType>
    <fullName>Epilepsia</fullName>
    <active>true</active>
    <label>Epilepsia</label>
</RecordType>