force-app/main/default/objects/VisMed_Segmentacion__c/recordTypes/Metabolicos.recordType-meta.xml
<RecordType>
    <fullName>Metabolicos</fullName>
    <active>true</active>
    <label>Metabolicos</label>
</RecordType>