force-app/main/default/objects/VisMed_Segmentacion__c/recordTypes/Metabolicos_y_Epilepsia.recordType-meta.xml
<RecordType>
    <fullName>Metabolicos_y_Epilepsia</fullName>
    <active>true</active>
    <label>Metabolicos y Epilepsia</label>
</RecordType>