force-app/main/default/objects/VisMed_Segmentacion__c/recordTypes/Pediatricos.recordType-meta.xml
<RecordType>
    <fullName>Pediatricos</fullName>
    <active>true</active>
    <label>Pediatricos</label>
</RecordType>