force-app/main/default/objects/VisMed_Segmentacion__c/recordTypes/Pediatricos_General.recordType-meta.xml
<RecordType>
    <fullName>Pediatricos_General</fullName>
    <active>true</active>
    <label>Pediatricos General</label>
</RecordType>