force-app/main/default/objects/VisMed_Segmentacion__c/recordTypes/VisMed_Nicho.recordType-meta.xml
<RecordType>
    <fullName>VisMed_Nicho</fullName>
    <active>true</active>
    <label>Nicho</label>
</RecordType>