force-app/main/default/objects/VisMed_Segmentacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Profesional__c</columns>
    <columns>Categoria__c</columns>
    <columns>Frecuencia__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>